--- a/index.html
+++ b/index.html
@@ -1,93 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>27번 도구 PASS/X</title>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>27 Technical Book Verifier</title>
 <style>
-  body { font-family: Arial; padding:20px; }
-  table { border-collapse: collapse; width:100%; margin-top:20px; }
-  th, td { border:1px solid #999; padding:8px; text-align:left; }
-  .pass { background:#ccffcc; }
-  .fail { background:#ffcccc; }
-  button { padding:4px 8px; }
+body{font-family:Arial;margin:16px}
+h1{font-size:18px}
+.bar{margin-bottom:10px}
+button{padding:6px 10px;margin-right:6px;cursor:pointer}
+table{border-collapse:collapse;width:100%}
+th,td{border:1px solid #ccc;padding:6px;font-size:12px}
+th{background:#f0f0f0}
+.btn{border:1px solid #888;background:#fff}
+.btn.active{background:#000;color:#fff}
 </style>
 </head>
 <body>
 
-<h2>27번 도구 – 엑셀 업로드</h2>
-<input type="file" id="excelFile" accept=".xlsx,.xls" />
+<h1>27번 도구 – 엑셀 업로드</h1>
 
-<table id="resultTable">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>ISBN</th>
-      <th>ANCHOR</th>
-      <th>PASS</th>
-      <th>X</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
+<div class="bar">
+<input type="file" id="file" accept=".xlsx"/>
+<button id="allPass">전체 PASS</button>
+<button id="allX">전체 X</button>
+</div>
+
+<table id="tbl">
+<thead>
+<tr>
+<th>Title</th>
+<th>ISBN</th>
+<th>ANCHOR</th>
+<th>Price</th>
+<th>Pub Date</th>
+<th>Pages</th>
+<th>PASS</th>
+<th>X</th>
+</tr>
+</thead>
+<tbody></tbody>
 </table>
 
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 <script>
-const input = document.getElementById('excelFile');
-const tableBody = document.querySelector('#resultTable tbody');
+const tbody=document.querySelector("#tbl tbody");
+let rows=[];
 
-input.addEventListener('change', handleFile);
-
-function handleFile(e) {
-  const file = e.target.files[0];
-  if(!file) return;
-
-  const reader = new FileReader();
-
-  reader.onload = function(ev) {
-    const data = new Uint8Array(ev.target.result);
-    const workbook = XLSX.read(data, { type: 'array' });
-
-    const sheetName = workbook.SheetNames[0];
-    const sheet = workbook.Sheets[sheetName];
-    const rows = XLSX.utils.sheet_to_json(sheet);
-
-    tableBody.innerHTML = '';
-
-    rows.forEach((row, idx) => {
-      const tr = document.createElement('tr');
-
-      const title = row.Title || row.title || '';
-      const isbn = row.ISBN || row.isbn || '';
-
-      // ANCHOR = 파일명 + 행번호
-      const anchor = file.name + ' / row:' + (idx + 2);
-
-      tr.innerHTML = `
-        <td>${title}</td>
-        <td>${isbn}</td>
-        <td>${anchor}</td>
-        <td><button onclick="markPass(this)">PASS</button></td>
-        <td><button onclick="markX(this)">X</button></td>
-      `;
-
-      tableBody.appendChild(tr);
-    });
-  };
-
-  reader.readAsArrayBuffer(file);
+function render(){
+tbody.innerHTML="";
+rows.forEach((r,i)=>{
+const tr=document.createElement("tr");
+tr.innerHTML=`
+<td>${r.title}</td>
+<td>${r.isbn}</td>
+<td>${r.anchor}</td>
+<td>${r.price||""}</td>
+<td>${r.date||""}</td>
+<td>${r.pages||""}</td>
+<td><button class="btn ${r.status==='PASS'?'active':''}" onclick="setStatus(${i},'PASS')">PASS</button></td>
+<td><button class="btn ${r.status==='X'?'active':''}" onclick="setStatus(${i},'X')">X</button></td>
+`;
+tbody.appendChild(tr);
+});
 }
 
-function markPass(btn){
-  const tr = btn.closest('tr');
-  tr.classList.remove('fail');
-  tr.classList.add('pass');
+function setStatus(i,val){
+rows[i].status=val;
+render();
 }
 
-function markX(btn){
-  const tr = btn.closest('tr');
-  tr.classList.remove('pass');
-  tr.classList.add('fail');
+document.getElementById("allPass").onclick=()=>{
+rows.forEach(r=>r.status='PASS');
+render();
+};
+document.getElementById("allX").onclick=()=>{
+rows.forEach(r=>r.status='X');
+render();
+};
+
+document.getElementById("file").addEventListener("change",async e=>{
+const f=e.target.files[0];
+const buf=await f.arrayBuffer();
+const wb=XLSX.read(buf,{type:'array'});
+const ws=wb.Sheets[wb.SheetNames[0]];
+const data=XLSX.utils.sheet_to_json(ws,{header:1});
+rows=[];
+for(let i=1;i<data.length;i++){
+let r=data[i];
+if(!r[0])continue;
+rows.push({
+title:r[1]||r[0],
+isbn:r[0],
+anchor:f.name+" / row:"+ (i+1),
+price:r[2]||"",
+date:r[3]||"",
+pages:r[4]||"",
+status:"PASS"
+});
 }
+render();
+});
 </script>
 
 </body>
